# trinket-m0

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  demo.uf2  flash.sh  make-uf2.sh  memory.x  post-build.sh  toggle_led.c  toggle_led.h
.cargo/: config
atmel-start/: .gitignore  AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h  main.c
atmel-start/armcc/: Makefile
atmel-start/config/: hpl_gclk_config.h  hpl_sercom_config.h  hpl_sysctrl_config.h  peripheral_clk_config.h
atmel-start/examples/: driver_examples.c
atmel-start/gcc/: Makefile
examples/: blinky.rs  echo.rs  swirly.rs  wiz.rs
src/: bindings.rs  hal.c  hal.h  hal.rs  lib.rs  main.rs
src/hal/: bindings.rs
