[package]
authors = ["me"]
edition = "2018"
readme = "README.md"
name = "trinket-m0"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
cty = "0.2.1"
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[build-dependencies]
cc = "1.0.47"
bindgen = "0.52.0"
