[package]
authors = ["michael.mogenson@gmail.com"]
edition = "2018"
readme = "README.md"
name = "trinket-m0"
version = "0.1.0"

[dependencies]
cty = "0.2.1"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
panic-halt = "0.2.0"

[build-dependencies]
bindgen = "0.53.2"
cc = "1.0.50"

[dev-dependencies]
apa102-spi = "0.3.2"
smart-leds = "0.3.0"
